bk_ida/gccida/g3/adjust_automodify_address_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2505:47: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_automodify_address_1( rtx memref, machine_mode mode, rtx addr, __int64 offset, int validate) 
                                              ^
                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2507:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2510:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2510:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2533:1: error: use of undeclared identifier 'v10'
v10 = gen_rtx_fmt_e0( MEM, v5, rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2534:14: error: use of undeclared identifier 'v10'
*( _QWORD *)&v10[1] = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2535:10: error: use of undeclared identifier 'v10'
memref = v10; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2536:9: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 8 | *( ( _BYTE *)v10 + 3) & 0xF7; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2536:56: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 8 | *( ( _BYTE *)v10 + 3) & 0xF7; 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2537:36: error: use of undeclared identifier 'v10'
*( ( _BYTE *)memref + 3) = ( _BYTE)v10; 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2538:9: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 0x10 | ( unsigned __int8)v10 & 0xEF; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2538:64: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 0x10 | ( unsigned __int8)v10 & 0xEF; 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2539:36: error: use of undeclared identifier 'v10'
*( ( _BYTE *)memref + 3) = ( _BYTE)v10; 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2540:9: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 0x80 | ( unsigned __int8)v10 & 0x7F; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2540:64: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 0x80 | ( unsigned __int8)v10 & 0x7F; 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2541:36: error: use of undeclared identifier 'v10'
*( ( _BYTE *)memref + 3) = ( _BYTE)v10; 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2542:9: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 4 | ( unsigned __int8)v10 & 0xFB; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2542:61: error: use of undeclared identifier 'v10'
LOBYTE( v10) = *( ( _BYTE *)v6 + 3) & 4 | ( unsigned __int8)v10 & 0xFB; 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/emit-rtl.c:2543:36: error: use of undeclared identifier 'v10'
*( ( _BYTE *)memref + 3) = ( _BYTE)v10; 
                                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_automodify_address_1/src/obj/emit-rtl.o] Error 1
